# hhemt

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  ENVIRONMENT_SNAPSHOT.md  HISTORY.md  README.md  _layout_relevant_files.yaml  architecture.md  conftest.py  environment-lock.yaml  environment.yaml  justfile  mkdocs.yml  pyproject.toml  requirements-pinned.txt  test_netcdf_output.py
.claude/: settings.local.json
.claude/agents/: README.md  hpc-slurm-integration.md  output-processing.md  pydantic-config-specialist.md  sensitivity-analysis.md  slurm-specialist.md  snakemake-specialist.md  snakemake-workflow.md  swmm-model-generation.md  triton-debugger.md  triton-specialist.md  triton-test-suite.md
.github/: ISSUE_TEMPLATE.md
.github/rulesets/: main.json
.github/workflows/: anonymization-guard.yml  citation-validate.yml  compile-tests.yml  doc-check.yml  docs-build.yml  publish.yml  test.yml
.prompts/: README.md  architecture.md  commit_phase.md  conventions.md  debugging_hpc_analysis.md  doc_freshness_check.md  implementation_plan.md  philosophy.md  plan_implementation.md  proceed_with_implementation.md  qaqc_and_commit.md
.prompts/_to_verify/: README.md  debugging_hpc_analysis.md  implementation_plan.md  import_audit.md  next_priority.md  smoke_tests.md  update_tracker.md  validate_and_proceed.md
configs/reports/: README.md  default_report_config.yaml  synth_multisim_report_config.yaml  synth_sensitivity_report_config.yaml
configs/ssh/: README.md
configs/transfers/: .gitignore  template_transfer.yaml
containers/: README.md  dev-cpu.def  frontier-rocm.def  uva-cpu.def  uva-cuda-a6000.def  uva-cuda.def
docs/: _work.ipynb  api.md  archived.ipynb  index.md  index.rst  installation.md  next_action_prompt.md  one_job_many_srun_tasks_plan.md  phase13_folder_structure_analysis.md  processing_sim_outputs.ipynb  refactor_prompt.md  refactoring_plan.md  running a simulation.ipynb  swmm_output_parser_optimization_plan.md  test_refactor_plan.md  tutorial_norfolk_case_study.ipynb  usage.md
docs/archived/: README.md  conda_activation_in_slurm_summary.md  examples_refactor_plan.md  log_field_race_condition_bugfix.md  model_specific_logs_refactoring.md  pc04_review_fixes_completed.md  pc04_review_fixes_implementation.md  pc04_snakemake_multisim_fix.md  wait_for_completion_implementation_implementation_summary.md
docs/explanation/: branching-and-release-model.md  capabilities.md  index.md  rerun-faq.md  software-availability.md
docs/how-to/: combining-experiments.md  config-filling.md  doi-roundtrip-e2e.md  forcing-reruns.md  hpc-profile-setup.md  in-flight-operations.md  (+6 more)
examples/: toolkit_quickstart.ipynb
profiling/: profile_runner.py
qgis/: synthetic_test.qgz
scripts/: README.md  anonymization_blocklist.txt  apply_main_ruleset.sh  check_anonymization.py  check_autodoc_coverage.py  check_doc_freshness.py  check_du_sentinel_sites.py  check_env_lock_consistency.py  check_experiment_structure.py  check_layout_version.py  check_retired_field_overlay_columns.py  reprex_blocklist.txt  update_docs_check.sh  verify_byte_identity.py
sidecars/: .main_backup_2026-04-24_090702.md  .main_backup_2026-04-27_145523.md  .main_backup_2026-04-27_145652.md  .main_backup_2026-04-28_100325.md  .main_backup_2026-05-01_140823.md  .main_backup_2026-05-01_195103.md  .main_backup_2026-05-03_003033.md  .main_backup_2026-05-03_213254.md  .main_backup_2026-05-04_101226.md  .main_backup_2026-05-06_145155.md  .main_backup_2026-05-13_231448.md  .main_backup_2026-05-14_131827.md  .main_backup_2026-05-15_164714.md  .main_backup_2026-05-15_175909.md  .main_backup_2026-05-16_170731.md  .main_backup_rebaseline_2026-05-12_192333.md  .main_backup_rebaseline_2026-05-12_213136.md  .main_backup_rebaseline_2026-05-13_231326.md  .main_backup_rebaseline_2026-05-15_114809.md  .main_backup_rebaseline_2026-05-15_133551.md  .main_backup_rebaseline_2026-05-15_143401.md  sidecar_atomic_2026-05-03_0407.md  sidecar_atomic_2026-05-14_1543.md  sidecar_atomic_2026-05-15_1438.md  sidecar_phase1_2026-05-03_1946.md  sidecar_phase1_2026-05-11_2314.md  sidecar_phase1_2026-05-14_0806.md  sidecar_phase1_2026-05-15_1131.md  sidecar_phase2_2026-05-03_2132.md  sidecar_phase2_2026-05-12_0845.md  sidecar_phase2_2026-05-14_1318.md  sidecar_phase2_2026-05-15_1647.md  sidecar_phase3_2026-05-03_2228.md  sidecar_phase3_2026-05-04_1011.md  sidecar_phase3_2026-05-12_2140.md  sidecar_phase3_2026-05-14_1457.md  sidecar_phase3_2026-05-15_1759.md  sidecar_phase4_2026-05-04_1015.md  sidecar_phase4_2026-05-12_2210.md  sidecar_phase5.5_2026-05-05_1135.md  (+10 more)
test_data/: tests_and_case_studies_example.yaml
tests/: __init__.py  _failing_fixture_helpers.py  conftest.py  test_01_singlesim.py  test_02_multisim.py  test_03_sensitivity_analysis_cpu_benchmarking.py  test_04_frontier.py  test_04_frontier_1core_multisim.py  test_04_slurm_hpc.py  test_05_frontier_all_compute_configs.py  test_06_UVA_1core_multisim.py  test_1sim_1core_per_sim.py  test_PC_00_compile_models.py  test_PC_01_singlesim.py  test_PC_02_multisim.py  test_PC_03_sensitivity_analysis_cpu_benchmarking.py  test_PC_04_multisim_with_snakemake.py  test_PC_05_sensitivity_analysis_with_snakemake.py  test_PC_06_sensitivity_analysis_triton_and_swmm_only.py  test_PC_07_per_sa_system_configs.py  test_PC_brand_theme.py  test_PILOT_platform_parametrized_workflow.py  test_UVA_01_1core_multisim.py  test_UVA_02_1core_multisim_e2e.py  test_UVA_02_e2e_multisim.py  test_UVA_02_multisim_with_snakemake.py  test_UVA_02_sensitivity.py  test_UVA_03_micro_multiCPU_sensitivity_analysis.py  test_UVA_03_multiCPU_sensitivity_analysis.py  test_UVA_03_sensitivity_analysis_with_snakemake.py  test_UVA_04_multiCPU_sensitivity_analysis_minirun.py  test_UVA_04_multiCPU_sensitivity_analysis_reduced_simtimes.py  test_UVA_05_multisim_with_snakemake.py  test_UVA_06_multisim_with_snakemake.py  test_UVA_06_sensitivity_analysis_with_snakemake.py  test_UVA_0x_sensitivity.py  test_analysis_test_end_to_end.py  test_brand_theme.py  test_bundle.py  test_bundle_exclude_config.py  (+177 more)
(+868 files in other folders)
