[project]
name = "hhemt"
version = "0.1.0"
description = "Tools for running and processing TRITON-SWMM models."
readme = "README.md"
authors = [
  {name = "Daniel Lassiter", email = "daniel.lassiter@outlook.com"}
]
maintainers = [
  {name = "Daniel Lassiter", email = "daniel.lassiter@outlook.com"}
]
classifiers = []

license = {text = "CC BY-NC 4.0"}

dependencies = [
    "filelock",
    "pydantic",
    "pyyaml",
    "zarr",
    "netcdf4",
    "h5netcdf",
    "scipy",
    "dask",
    "matplotlib",
    "seaborn",
    "sparse",
    "pint",
    "bagit",
    "openpyxl",
    "rioxarray",
    "geopandas",
    "pyproj",
    "shapely",
    "hsclient",
    "pyswmm",
    "swmmio",
    "tabulate",
    "notebook",
    "jupyter_server",
    "ipywidgets",
    "globus-sdk>=3.0",
    "plotly==5.24.1",
    "datashader>=0.16",
    "jinja2>=3.1",
    # CLI framework — cli.py / version_migration/__main__.py import these, and
    # the `hhemt` console-script entry-point requires them at runtime.
    "typer",
    "rich",
    # Snakemake is a CORE runtime dependency: every Analysis.run() / submit_workflow()
    # performs a `snakemake` dry-run on the default (local) submission path, so a
    # `pip install hhemt` with no extras must be able to orchestrate a local workflow.
    # The SLURM executor/storage plugins stay in the `hpc` extra (HPC-only).
    "snakemake==9.15.0",
]
requires-python = ">= 3.11, < 3.13"

[project.optional-dependencies]
test = [
    "ruff==0.15.10",
    "ty",
    "pytest",
    "pytest-xdist>=3.0",
    "coverage",
]
viz-export = ["kaleido>=0.2.1,<1.0"]
# HPC orchestration extras required by SnakemakeWorkflowBuilder when
# multi_sim_run_method='batch_job' or '1_job_many_srun_tasks'. The
# _validate_batch_job_dry_run path in workflow.py:2274 unconditionally invokes
# `snakemake --executor slurm`, which requires the slurm executor plugin even
# for dry runs. `snakemake` itself is now a CORE dependency (see above); these
# are the SLURM-only executor/storage plugins. The jobstep plugin is required
# for the SLURM-job-step model the toolkit uses for per-rule resource control.
hpc = [
    "snakemake-executor-plugin-slurm>=2.0,<3",
    "snakemake-executor-plugin-slurm-jobstep>=0.3,<1",
    "snakemake-storage-plugin-fs==1.1.3",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-htmlproofer-plugin",
]

[project.urls]
bugs = "https://github.com/lassiterdc/hhemt/issues"
changelog = "https://github.com/lassiterdc/hhemt/blob/master/changelog.md"
homepage = "https://github.com/lassiterdc/hhemt"

[project.scripts]
hhemt = "hhemt.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true

[tool.setuptools.package-data]
hhemt = [
    "examples/*.yaml",
    "examples/*.md",
    "examples/*.xlsx",
    "examples/*.csv",
    "report_templates/**/*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["test_data", "docs", ".git", ".venv", "venv"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "globus_e2e: end-to-end Globus transfer tests; require activated endpoints and HHEMT_GLOBUS_E2E=1",
    "requires_snakemake_subprocess: test launches Snakemake subprocess; serialize under xdist",
]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:pkg_resources",
]
