[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hhemt"
version = "0.1.0"
description = "Tools for running and processing TRITON-SWMM models."
readme = "README.md"
authors = [
  {name = "Daniel Lassiter", email = "daniel.lassiter@outlook.com"}
]
maintainers = [
  {name = "Daniel Lassiter", email = "daniel.lassiter@outlook.com"}
]
classifiers = []

license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]

dependencies = [
    "filelock",
    "pydantic",
    "pyyaml",
    "zarr",
    "netcdf4",
    "h5netcdf",
    "h5py",  # h5netcdf's default backend; scenario._write_sim_weather_nc reads weather.nc via the xarray h5netcdf engine
    "scipy",
    "dask",
    "matplotlib",
    "seaborn",
    "sparse",
    "pint",
    "bagit",
    "openpyxl",
    "rioxarray",
    "geopandas",
    "pyproj",
    "shapely",
    "hsclient",
    "pyswmm",
    "swmmio",
    "tabulate",
    "notebook",
    "jupyter_server",
    "ipywidgets",
    "globus-sdk>=3.0",
    "plotly==5.24.1",
    # !=0.2.1.post1 excludes the ARM-only (manylinux2014_armv7l) re-upload of
    # kaleido; PEP 440 ranks .post1 above 0.2.1, so the bare range greedily picks
    # it and a fresh x86_64 install fails (no x86_64 wheel, no sdist). Plain 0.2.1
    # carries the manylinux1_x86_64 wheel used on all real targets.
    "kaleido>=0.2.1,!=0.2.1.post1,<1.0",
    "datashader>=0.16",
    "jinja2>=3.1",
    # CLI framework — cli.py / version_migration/__main__.py import these, and
    # the `hhemt` console-script entry-point requires them at runtime.
    "typer",
    "rich",
    # Snakemake is a CORE runtime dependency: every Analysis.run() / submit_workflow()
    # performs a `snakemake` dry-run on the default (local) submission path, so a
    # `pip install hhemt` with no extras must be able to orchestrate a local workflow.
    # The SLURM executor/storage plugins stay in the `hpc` extra (HPC-only).
    "snakemake==9.15.0",
    # ro-crate-py is a CORE runtime dependency: consolidation embeds a
    # deterministic RO-Crate provenance core into every analysis DataTree and
    # writes a co-located ro-crate-metadata.json sidecar (ADR-5/6/7). Pinned for
    # byte-deterministic serialization; its footprint does not touch the pydantic pin.
    "rocrate==0.15.0",
]
requires-python = ">= 3.11, < 3.13"

[project.optional-dependencies]
test = [
    "ruff==0.15.10",
    "ty",
    "pytest",
    "pytest-xdist>=3.0",
    "coverage",
]
# viz-export retained as an empty alias for one deprecation cycle so the
# documented `pip install -e '.[viz-export]'` keeps resolving after kaleido
# moved to core deps (sub-meter-flood-visibility Phase 1). Remove next cycle.
viz-export = []
# HPC orchestration extras required by SnakemakeWorkflowBuilder when
# multi_sim_run_method='batch_job' or '1_job_many_srun_tasks'. The
# _validate_batch_job_dry_run path in workflow.py:2274 unconditionally invokes
# `snakemake --executor slurm`, which requires the slurm executor plugin even
# for dry runs. `snakemake` itself is now a CORE dependency (see above); these
# are the SLURM-only executor/storage plugins. The jobstep plugin is required
# for the SLURM-job-step model the toolkit uses for per-rule resource control.
hpc = [
    "snakemake-executor-plugin-slurm>=2.0,<3",
    "snakemake-executor-plugin-slurm-jobstep>=0.3,<1",
    "snakemake-storage-plugin-fs==1.1.3",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-htmlproofer-plugin",
]

[project.urls]
bugs = "https://github.com/lassiterdc/hhemt/issues"
changelog = "https://github.com/lassiterdc/hhemt/blob/main/changelog.md"
homepage = "https://github.com/lassiterdc/hhemt"

[project.scripts]
hhemt = "hhemt.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# Typer declares CLI params as `name: type = typer.Option(...)` / `typer.Argument(...)`,
# i.e. a function call in the parameter default — the idiomatic Typer API. B008
# (function-call-in-default) is a false positive for this pattern; suppressing it
# here is the standard resolution (the alternative is migrating every CLI parameter
# to `Annotated[type, typer.Option(...)]`).
"src/hhemt/cli.py" = ["B008"]

[tool.uv]
package = true

[tool.setuptools.package-data]
hhemt = [
    "examples/*.yaml",
    "examples/*.md",
    "examples/*.xlsx",
    "examples/*.csv",
    "report_templates/**/*",
    "invalidating_fixes.yaml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["test_data", "docs", ".git", ".venv", "venv", "dev"]
# census-green-up Phase 1 — systematic tmp hygiene. Default "all" keeps every
# test's tmp_path for the whole run (and the last 3 base dirs across runs); with
# large per-test fixture artifacts that accumulates to tens of GB within one run
# and can exhaust the disk. "failed" reclaims each passing test's tmp_path
# immediately while retaining failed-test tmp dirs for debugging.
tmp_path_retention_policy = "failed"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "globus_e2e: end-to-end Globus transfer tests; require activated endpoints and HHEMT_GLOBUS_E2E=1",
    "requires_snakemake_subprocess: test launches Snakemake subprocess; serialize under xdist",
]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:pkg_resources",
]
